--- a/korepetycje-front/public/index.html
+++ b/korepetycje-front/public/index.html
@@ -9,6 +9,7 @@
     <!-- Add leaflet library -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.0/dist/leaflet.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet-geosearch@2.6.0/assets/css/leaflet.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,500" rel="stylesheet">
     <link href=/js/map.js rel=preload as=script>
 
